--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -850,8 +850,8 @@ section #title .credits.right {
   }
 }
 #pic1 {
-  margin-left: 10px;
+  position: center;
 }
 #pic2 {
-  margin-right:10px;
+  position: center;
 }
