--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -855,3 +855,10 @@ section #title .credits.right {
 #pic2 {
   margin-left: 32px;
 }
+#social {
+  height: 75px;
+  width: 75px;
+}
+.caption {
+  text-align: center;
+}
