--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -858,6 +858,7 @@ section #title .credits.right {
 #social {
   height: 75px;
   width: 75px;
+  margin-left: 200px;
 }
 .caption {
   text-align: center;
