--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -149,6 +149,7 @@ textarea {
  */
 body {
   margin: 0;
+  background-image:url ("http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png");
 }
 
 /* =============================================================================
