--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -858,15 +858,16 @@ section #title .credits.right {
 #social {
   height: 60px;
   width: 60px;
+  position:center;
   
 }
 .caption {
   text-align: center;
 }
 #footer{
-  position:fixed;
+  position:absolute;
   float: left;
   top:30px;
   right:5px;
-  width: 700px;
+  z-index:-1;
 }
