--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -865,8 +865,7 @@ section #title .credits.right {
   text-align: center;
 }
 #footer{
-  position:absolute;
-  float: left;
+  position:relative;
   top:30px;
   right:5px;
   z-index:-1;
