--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -864,7 +864,7 @@ section #title .credits.right {
 .caption {
   text-align: center;
 }
-#footer{
+.footer{
   position:relative;
   top:30px;
   right:5px;
