--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -1,4 +1,5 @@
-.highlight .hll { background-color: #404040 }
+.highlight .hll { background-image:"http://i1078.photobucket.com/albums/w500/Gashadokurox/Fancy-Purple-Pattern-Tablet-Background.jpg" 
+                  background-color: #404040;}
 .highlight  { color: #d0d0d0 }
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
