--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -866,8 +866,8 @@ section #title .credits.right {
   text-align: center;
 }
 .footer{
-  position:absolute;
-  top:30px;
+  position: relative;
+  top:10px;
   right:5px;
   z-index:-1;
 }
