--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -866,8 +866,8 @@ section #title .credits.right {
   text-align: center;
 }
 .footer{
-  position: relative;
-  top:10px;
-  right:5px;
+  position: absolute;
+  bottom:10px;
+  left:5px;
   z-index:-1;
 }
