--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -866,8 +866,8 @@ section #title .credits.right {
   text-align: center;
 }
 .footer{
-  position: absolute;
-  bottom:10px;
+  position: relative;
+  bottom:5px;
   left:5px;
   z-index:-1;
 }
