--- a/stylesheets/educationcss.css
+++ b/stylesheets/educationcss.css
@@ -530,8 +530,8 @@ table {
 }
 
 body {
-  padding: 0px 0 20px 0px;
-  margin: 0px;
+  padding: 0px 0px 20px 0px;
+  margin: 50px;
   font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #f0e7d5;
   font-weight: normal;
