--- a/stylesheets/educationcss.css
+++ b/stylesheets/educationcss.css
@@ -851,6 +851,14 @@ section #title .credits.right {
   }
 }
 
-calpolylogo{
-  z-index=-1
+.imgs1{
+  margin-left:5px;
+  margin-top:0px;
+  z-index:-1;
 }
+.imgs2{
+  margin-right:5px;
+  margin-top:0px
+  z-index:-1;
+}
+
